2010-06-26  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Simple configuration): Explain that
	GRUB_DISABLE_LINUX_RECOVERY and GRUB_DISABLE_NETBSD_RECOVERY must be
	set to `true' to disable their respective recovery entries, not
	merely set.

2010-06-26  Colin Watson  <cjwatson@ubuntu.com>

	Make the `source' command slightly faster.

	* normal/main.c (grub_normal_execute): Don't re-read list files when
	nested.

2010-06-23  Colin Watson  <cjwatson@ubuntu.com>

	* loader/i386/multiboot_mbi.c (retrieve_video_parameters): Set red
	field position and mask size to red fields from mode_info, not
	green.
	* loader/multiboot_mbi2.c (retrieve_video_parameters): Likewise.
	Remove redundant tag->common.framebuffer_type assignment.
	Reported by: Seth Goldberg.

2010-06-23  Colin Watson  <cjwatson@ubuntu.com>

	Sync up other versions of the Linux loader with Robert Millan's
	change of 2010-01-09, "Make loader output a bit more user-friendly".

	* loader/i386/efi/linux.c (grub_linux_boot): Move debug info to
	grub_dprintf().
	(grub_cmd_linux): Likewise.
	(grub_cmd_initrd): Likewise.
	* loader/i386/ieee1275/linux.c (grub_cmd_linux): Likewise.
	* loader/i386/pc/linux.c (grub_cmd_linux): Likewise.

2010-06-21  Colin Watson  <cjwatson@ubuntu.com>

	* kern/efi/mm.c (grub_efi_mm_init): Handle systems with memory maps
	larger than MEMORY_MAP_SIZE.

2010-06-21  BVK Chaitanya  <bvk.groups@gmail.com>

	Fix parallel build.

	* conf/common.rmk: Add grub_script.tab.h as a grub-script-check
	dependency.
	* script/parser.y: #include grub_script.tab.h header.

2010-06-20  Vladimir Serbinenko  <phcoder@gmail.com>

	Support >3GiB and <16MiB RAM in i386-qemu.

	* kern/i386/qemu/mmap.c (QEMU_CMOS_MEMSIZE2_HIGH): New const.
	(QEMU_CMOS_MEMSIZE2_LOW): Likewise.
	(grub_lower_mem): Removed.
	(grub_upper_mem): Likewise.
	(mem_size): Made static.
	(above_4g): New variable.
	(grub_machine_mmap_init): Detect small mem_size and above_4g.